--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,10 @@
-{% for message in get_flashed_messages() %}
-    <div style="color: red;">{{ message }}</div>
-{% endfor %}
-
-{% if g.user %}
-    <h2>{{ g.user.firstname }}</h2>
-{% endif %}
-
-<h1>Login</h1>
-<form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required><br />
-
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required> <br />
-
-    <input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html>
+    <h1>Twork</h1>
+    <h2>Login Form</h2>
+    <form action = "/login" , method = 'POST'>
+    <input type='text' name='username' placeholder="Enter Username" required>
+    <input type='password' name='password' required>
+    <input type='submit'>
+    </form>
+</html>
