--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+
+
+    {% for message in get_flashed_messages() %}
+        <div style="color: red;">{{ message }}</div>
+    {% endfor %}
+    
     <h1>Twork</h1>
     <h2>Register Form</h2>
     <form action = "/register" , method = 'POST'>
