--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    {% if current_user.is_authenticated %}
+        <h1>Hello, {{ current_user.firstname }}</h1>
+    {% else %}
+        <h1>No users logged in</h1>
+    {% endif %}
     <body>
         <p>Twerk your ass and make Twork</p>
     </body>
