--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <html>
-    {% if current_user.is_authenticated %}
-        <h1>Hello, {{ current_user.firstname }}</h1>
-    {% else %}
-        <h1>No users logged in</h1>
-    {% endif %}
     <body>
-        <p>Twerk your ass and make Twork</p>
+        <div id="intro" class = "text-center">
+        <h1 class="text-center">Twork , the Task Manager</h1>
+        <p id="brief">Twork is a task Manager made with Flask, SQL-Alchemy, Flask-login , Jinja and SQLite</p>
+        </div>
+    {% if current_user.is_authenticated %}
+        <div id="visit" class="text-center">
+        <p>Hello, {{ current_user.firstname }}</p>
+        
+            <p>Visit your dashboard!</p>
+            <a href="{{url_for('dashboard')}}" class="btn btn-primary">Click here to visit your dashboard</a>
+        </div>
+    {% else %}    
+        <div id="box">
+        <div id="existing">
+        <p>Existing user?</p>
+        <a href="{{url_for('login')}}" class="btn btn-info">Click to login</a>
+        </div>
+        <div id="new">
+        <p>
+            New User?
+        </p>
+        <a href="{{url_for('register')}}" class="btn btn-info">Register here</a>
+        </div>
+        </div>
+
+    {% endif %}
     </body>
 </html>
+
+<style>
+    body{ 
+        
+        overflow: hidden;
+        background-image: url("https://cdn.dribbble.com/users/1162077/screenshots/4948920/mechanical-pattern.gif");
+        background-size: cover;
+        height : 100vh;
+        padding :0;
+        margin : 0;
+    }
+    #intro{left: 0;
+        line-height: 200px;
+        margin-top: -100px;
+        position: absolute;
+        text-align: center;
+        top: 50%;
+        width: 100%;
+    }
+    #brief{
+        left:0;
+        line-height: 200px;
+        margin-top: -80px;
+        position: absolute;
+        text-align: center;
+        top: 100%;
+        width: 100%;
+
+    }
+    h1{
+        font-family:'Courier New', Courier, monospace;
+        color: white;
+    }
+    #brief{
+        font-family: monospace;
+        color:white;
+        padding-top: 10 px;
+    }
+    #box{
+        display:flex;
+        justify-content:space-between;
+    }
+   #new,#existing{
+       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+       color: whitesmoke
+   }
+   #visit{
+       font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+       color: whitesmoke
+   }
+    
+</style>
